# kdepim-addons

./: .craft.ini  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  COPYING.LIB  REUSE.toml  config-kdepim-addons.h.in  kcoreaddons_kdepim_compat.h  kdepim-addons.categories  kdepim-addons.renamecategories
akonadi-import-wizard/: CMakeLists.txt  Messages.sh
akonadi-import-wizard/evolutionv1/: CMakeLists.txt  evolutionv1importdata.cpp  evolutionv1importdata.h  evolutionv1importer.json
akonadi-import-wizard/evolutionv2/: CMakeLists.txt  evolutionv2importdata.cpp  evolutionv2importdata.h  evolutionv2importer.json
akonadi-import-wizard/geary/: CMakeLists.txt  gearyaddressbook.cpp  gearyaddressbook.h  gearyimportdata.cpp  gearyimportdata.h  gearyimporter.json  gearysettings.cpp  gearysettings.h
akonadi-import-wizard/mailapp/: CMakeLists.txt  mailappimportdata.cpp  mailappimportdata.h  mailappimporter.json
akonadi-import-wizard/nylas-mail/: CMakeLists.txt  nylasmaildata.cpp  nylasmaildata.h  nylasmailimporter.json  nylasmailsettings.cpp  nylasmailsettings.h
akonadi-import-wizard/oe/: CMakeLists.txt  oeimportdata.cpp  oeimportdata.h  oeimporter.json
akonadi-import-wizard/opera/: CMakeLists.txt  operaaddressbook.cpp  operaaddressbook.h  operaimportdata.cpp  operaimportdata.h  operaimporter.json  operasettings.cpp  operasettings.h
akonadi-import-wizard/pmail/: CMakeLists.txt  pmailimportdata.cpp  pmailimportdata.h  pmailimporter.json  pmailsettings.cpp  pmailsettings.h
akonadi-import-wizard/thebat/: CMakeLists.txt  thebatimportdata.cpp  thebatimportdata.h  thebatimporter.json
kaddressbook/: CMakeLists.txt
kaddressbook/contacteditor/: CMakeLists.txt  Messages.sh  addresslocationeditorplugin.cpp  addresslocationeditorplugin.h  addresslocationeditorplugin.json
kaddressbook/editorpages/: CMakeLists.txt  Messages.sh  cryptopageplugin.cpp  cryptopageplugin.h
kaddressbook/importexportplugins/: CMakeLists.txt  Messages.sh
kaddressbook/plugins/: CMakeLists.txt  Messages.sh
kaichat-plugins/addressbook/: CMakeLists.txt  Messages.sh  kaichat_addressbook.json  kaichataddressbookplugin.cpp  kaichataddressbookplugin.h  kaichataddressbookplugindialog.cpp  kaichataddressbookplugindialog.h  kaichataddressbookpluginjob.cpp  kaichataddressbookpluginjob.h  kaichataddressbookpluginutils.cpp  kaichataddressbookpluginutils.h  kaichataddressbookpluginwidget.cpp  kaichataddressbookpluginwidget.h
kaichat-plugins/calendar/: CMakeLists.txt  Messages.sh  kaichat_calendar.json  kaichataddressbookplugin.h  kaichataddressbookplugindialog.cpp  kaichataddressbookplugindialog.h  kaichataddressbookpluginjob.cpp  kaichataddressbookpluginjob.h  kaichataddressbookpluginutils.cpp  kaichataddressbookpluginwidget.h  kaichatcalendarplugin.cpp  kaichatcalendarplugin.h  kaichatcalendarplugindialog.cpp  kaichatcalendarplugindialog.h  kaichatcalendarpluginjob.cpp  kaichatcalendarpluginjob.h  kaichatcalendarpluginutils.cpp  kaichatcalendarpluginutils.h  kaichatcalendarpluginwidget.cpp  kaichatcalendarpluginwidget.h
kldap/activities/: CMakeLists.txt  ldapactivitiesplugin.cpp  ldapactivitiesplugin.h
kmail/: CMakeLists.txt
kmail/checkbeforedeletemailplugins/: CMakeLists.txt  Messages.sh
kmail/editorconvertertextplugins/: CMakeLists.txt  Messages.sh
kmail/editorinitplugins/: CMakeLists.txt  Messages.sh
kmail/editorplugins/: CMakeLists.txt  Messages.sh
kmail/editorsendcheckplugins/: CMakeLists.txt  Messages.sh
kmail/grammarplugins/: CMakeLists.txt  Messages.sh
kmail/kcm/: CMakeLists.txt
kmail/plugins/: CMakeLists.txt  Messages.sh
kmailtransport/activities/: CMakeLists.txt  kmailtransportactivities.json  transportactivitiesplugin.cpp  transportactivitiesplugin.h
kmailtransport/sendmail/: CMakeLists.txt  sendmailconfigdialog.cpp  sendmailconfigdialog.h  sendmailconfigwidget.cpp  sendmailconfigwidget.h  sendmailjob.cpp  sendmailjob.h  sendmailsettings.ui  sendmailtransport.json  sendmailtransportplugin.cpp  sendmailtransportplugin.h
korganizer/emailaddressselectionldapdialog/: CMakeLists.txt  emailaddressselectionldapdialog.cpp  emailaddressselectionldapdialog.h  emailaddressselectionldapdialog.json
korganizer/plugins/: CMakeLists.txt  Messages.sh
korganizer/plugins/datenums/: datenums.h  (+6 more)
pimautogeneratetext/autotests/: CMakeLists.txt  autogenerateconfigureaskdialogtest.cpp  autogenerateconfigureaskdialogtest.h  autogenerateconfigureaskitemtest.cpp  autogenerateconfigureaskitemtest.h  autogenerateconfigureaskwidgettest.cpp  autogenerateconfigureaskwidgettest.h  autogenerateconfigurelistviewtest.cpp  autogenerateconfigurelistviewtest.h
pimautogeneratetext/src/: CMakeLists.txt  autogenerateconfigureaskdialog.cpp  autogenerateconfigureaskdialog.h  autogenerateconfigureaskfilterproxymodel.cpp  autogenerateconfigureaskfilterproxymodel.h  autogenerateconfigureaskinfo.cpp  autogenerateconfigureaskinfo.h  autogenerateconfigureaskitem.cpp  autogenerateconfigureaskitem.h  autogenerateconfigureaskmanager.cpp  autogenerateconfigureaskmanager.h  autogenerateconfigureaskmenu.cpp  autogenerateconfigureaskmenu.h  autogenerateconfigureaskmodel.cpp  autogenerateconfigureaskmodel.h  autogenerateconfigureaskutils.cpp  autogenerateconfigureaskutils.h  autogenerateconfigureaskwidget.cpp  autogenerateconfigureaskwidget.h  autogenerateconfigurelistview.cpp  autogenerateconfigurelistview.h  autogenerateconfigurelistviewdelegate.cpp  autogenerateconfigurelistviewdelegate.h  pimautogeneratetext_private_export.h
plugins/: CMakeLists.txt
plugins/customtoolsplugins/: CMakeLists.txt  Messages.sh
plugins/messageviewer/: CMakeLists.txt
plugins/messageviewerconfigureplugins/: CMakeLists.txt  Messages.sh
plugins/messageviewerheaderplugins/: CMakeLists.txt  Messages.sh
plugins/messageviewerplugins/: CMakeLists.txt  Messages.sh
plugins/messageviewerwebengineurlinterceptor/: CMakeLists.txt  Messages.sh
plugins/plasma/: CMakeLists.txt
plugins/storageservices/: CMakeLists.txt  Messages.sh
plugins/templateparser/: CMakeLists.txt  (+3 more)
(+3752 files in other folders)
