add_definitions(-DTRANSLATION_DOMAIN=\"importwizard_plugins\")
add_subdirectory(evolutionv1)
add_subdirectory(evolutionv2)
add_subdirectory(geary)
if (APPLE)
  add_subdirectory(mailapp)
endif()
add_subdirectory(opera)
if (WIN32)
   add_subdirectory(pmail)
   add_subdirectory(thebat)
   add_subdirectory(oe)
endif()
